@@ -4,5 +4,5 @@ source @sub_MRNETAPP_HOME@/etc/sourceme.sh
 
 export TREE_DBSCAN_HOME=@sub_PREFIX@
 export MRNAPP_FILTER_PATH=$TREE_DBSCAN_HOME/lib:$MRNAPP_FILTER_PATH
-export LD_LIBRARY_PATH=@sub_MRNETAPP_LIBSDIR@:@sub_CLUSTERING_LIBSDIR@:@sub_CGAL_LIBSDIR@:@sub_BOOST_LDPATH@:$LD_LIBRARY_PATH
+export LD_LIBRARY_PATH=@sub_MRNETAPP_LIBSDIR@:@sub_PREFIX@/lib:@sub_CGAL_LIBSDIR@:@sub_BOOST_LDPATH@:$LD_LIBRARY_PATH
 
